# blog

./: .env.example  .gitignore  404.html  AGENTS.md  BILINGUAL_ARCHITECTURE.md  CNAME  README.md  TRANSLATION_PIPELINE.md  WRITING_STYLE.md  about.html  build.bat  build.py  build.sh  config.py  cv_data.yaml  cv_reference.md  filter.js  index.html  landing.css  landing.html  list_gemini_models.py  opencode.json  post-metadata.json  post.css  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  skill.md  styles.css  theme.js  transitions.js  translator.py
.github/: copilot-instructions.md  design-philosophy.md  ui-motion-philosophy.md
_source/: build.py  config.py  content_loader.py  cv_parser.py  helpers.py  html_validator.py  link_checker.py  markdown_refs.py  paths.py  presentation_compiler.py  presentation_translation.py  renderer.py  seo.py  translation_common.py  translator.py  translator_old.py  validate.py
blog/: choosing-the-right-gpu-for-ai-learning.html  css-animations-guide.html  modern-web-development.html  writing-a-blog-post.html
blog-posts/: choosing-the-right-gpu-for-ai-learning.md  css-animations-guide.md  modern-web-development.md
docs/: mapr-presentation-port-plan.md  translation_v2_opencode_runbook.md
en/: about.html  cv.html  index.html
pt/: about.html  cv.html  index.html
tests/: test_build.py  test_build_cli.py  test_build_presentation_integration.py  test_build_translation_routing_integration.py  test_build_translation_v2_integration.py  test_content_loader.py  test_html_validator.py  test_link_checker.py  test_markdown_refs.py  test_opencode_provider_loop.py  test_opencode_runner.py  test_presentation_compiler.py  test_presentation_translation.py  (+20 more)
(+119 files in other folders)
